@@ -1,3 +1,5 @@
+2009-01-19 Fix bug in quiver argument handling. - EF
+
 2009-01-19 Fix bug in backend_gtk: don't delete nonexistent toolbar. - EF
 
 2009-01-16 Fix bug in is_string_like so it doesn't raise an
